--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 first edit 2010-10-10
-01-infoMngmt ---  a simple student information management program on terminal-10-10
+01-infoMngmt ---  a simple student information management program on terminal---2016-10-10th
 last edit 2010-10-10
 
